# sdk-plugin

./: .gitignore  CMakeConfig.cmake.in  CMakeLists.txt  Makefile  README.md
test/: CMakeLists.txt  CMakePresets.json  Makefile  TestConsole.h  main.cpp  main.h  test_FNameFString.cpp  test_Runtime.h
